--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "cleave.js": "^1.6.0",
     "dayjs": "^1.11.7",
     "highlight.js": "^11.7.0",
+    "moment": "^2.29.4",
     "pinia": "^2.0.36",
+    "swiper": "^9.4.1",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0",
     "vue-tippy": "^6.2.0",
