--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   "css.customData": [".vscode/unocss.json"],
   "files.associations": {
     "*.css": "postcss"
-  }
+  },
+  "vue.codeActions.enabled": false
 }
