--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@kyvg/vue3-notification": "^2.9.1",
     "@point-hub/vue-cookie": "^0.2.1",
     "@vueuse/core": "^10.1.2",
+    "axios": "^1.5.0",
     "cleave.js": "^1.6.0",
     "dayjs": "^1.11.7",
     "highlight.js": "^11.7.0",
@@ -33,7 +34,8 @@
     "vue": "^3.3.2",
     "vue-router": "^4.2.0",
     "vue-tippy": "^6.2.0",
-    "vue3-popper": "^1.5.0"
+    "vue3-popper": "^1.5.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
