--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "vue": "^3.3.2",
     "vue-router": "^4.2.0",
     "vue-tippy": "^6.2.0",
+    "vue3-google-login": "^2.0.33",
+    "vue3-google-oauth2": "^1.0.7",
     "vue3-popper": "^1.5.0",
     "vuex": "^4.0.2"
   },
