--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@unocss/reset": "^0.51.12",
     "@unocss/transformer-directives": "^0.51.12",
     "@vitejs/plugin-vue": "^4.2.2",
+    "@vue/compiler-sfc": "^3.4.38",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
