--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@highlightjs/vue-plugin": "^2.1.0",
     "@kyvg/vue3-notification": "^2.9.1",
     "@point-hub/vue-cookie": "^0.2.1",
+    "@types/gapi": "^0.0.47",
     "@vueuse/core": "^10.1.2",
     "axios": "^1.5.0",
     "cleave.js": "^1.6.0",
