--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 VITE_APP_NAME=ThinkAction
+=
 VITE_FONTAWESOME_ICON_BASEURL=https://icons.iap.my.id/fontawesome/6.4.0/svgs
 VITE_BASE_API_URL='http://localhost:5000/v1/'
-# VITE_BASE_API_URL='https://api-think-action.vercel.app/v1/'
 VITE_GOOGLE_CLIENT_ID=
+# VITE_BASE_API_URL='https://api-think-action.vercel.app/v1/'
+# VITE_ASSET_API_URL='https://stiva.xyz/file/'
 VITE_ASSET_API_URL='http://localhost:5000/v1/images/'
