--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "dayjs": "^1.11.7",
     "highlight.js": "^11.7.0",
     "pinia": "^2.0.36",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.3",
     "swiper": "^9.4.1",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0",
@@ -49,7 +51,7 @@
     "@unocss/reset": "^0.51.12",
     "@unocss/transformer-directives": "^0.51.12",
     "@vitejs/plugin-vue": "^4.2.2",
-    "@vue/compiler-sfc": "^3.4.38",
+    "@vue/compiler-sfc": "^3.5.13",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
@@ -64,10 +66,10 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "start-server-and-test": "^2.0.0",
-    "typescript": "^5.0.4",
+    "typescript": "^5.8.3",
     "unocss": "^0.51.12",
     "vite": "^4.3.5",
     "vitest": "^0.31.0",
-    "vue-tsc": "^1.6.4"
+    "vue-tsc": "^2.2.8"
   }
 }
