--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "primevue": "^4.3.3",
     "swiper": "^9.4.1",
     "vue": "^3.3.2",
+    "vue-gtag": "^3.5.0",
     "vue-router": "^4.2.0",
     "vue-tippy": "^6.2.0",
     "vue3-google-login": "^2.0.33",
